# dv-interfaces

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  publish.yml
changelog/: index.html
configuration/: index.html
controlling/: index.html
detection/: index.html
docs/: configuration.md  controlling.md  detection.md  drivers.md  getting-started.md  index.md  reading.md  streaming.md  testing.md
drivers/: index.html
examples/: README.md  batch_readings.py  detect_and_read.py  poll_forever.py
getting-started/: index.html
reading/: index.html
search/: search_index.json
src/dv_interfaces/: __init__.py  _registry.py  base_interface.py  detection.py  exceptions.py  modbus.py  utils.py
src/dv_interfaces/cli/: detect.py  read.py
src/dv_interfaces/drivers/: meteocontrol.py  sma.py  smartdog.py  solarlog.py
streaming/: index.html
testing/: index.html
tests/: test_codec.py  test_detection.py  test_drivers.py  test_factory.py  test_hardware.py  test_models.py  test_utils.py
