[project]
name = "dv-interfaces"
version = "2.0.1"
description = "Unified Modbus TCP driver library for solar plant hardware used in Direktvermarktung"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Gregorio Rodrigo", email = "grrodre@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pymodbus>=3.0",
    "pydantic>=2.0",
]

[dependency-groups]
lint = [
    "ruff>=0.6.2",
    "ty>=0.0.23",
    { include-group = "test" },
]
test = [
    "pytest>=9.0.2",
]
dev = [
    { include-group = "lint" },
    "mkdocs-material>=9.5",
    "pytest-sugar>=1.0",
    "pytest-clarity>=1.0",
    "rich>=13.0",
]

[project.scripts]
dv-detect = "dv_interfaces.cli.detect:main"
dv-read = "dv_interfaces.cli.read:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dv_interfaces"]

[tool.ruff]
[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint]
extend-select = ["Q", "I"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: tests that require a real physical device (deselect with '-m not hardware')",
]
